# long-nard

./: .gitignore  README.md  main.py  pyproject.toml
long-nard/: nard.py
resources/: record.json
