[tool.poetry]
name = "long-nard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "long-nard"}]

[tool.poetry.scripts]
nard = "long-nard.nard:main"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
